--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dorcas-s3-evaluacion-intermedia-irenemherrero",
+  "homepage": "./",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
